Added database functionality. Repository, Entities, and Database.

--- a/app/src/main/res/layout/activity_vacation_list.xml
+++ b/app/src/main/res/layout/activity_vacation_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UI.VacationList">
+    tools:context="main.VacationList">
 
     <TextView
         android:id="@+id/textView"
@@ -24,5 +24,13 @@
         android:textSize="60sp"
         tools:layout_editor_absoluteX="264dp"
         tools:layout_editor_absoluteY="581dp" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="113dp"
+        android:layout_height="352dp"
+        android:layout_marginStart="128dp"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="171dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
