--- a/app/src/main/res/layout/activity_vacation_details_excursion_list.xml
+++ b/app/src/main/res/layout/activity_vacation_details_excursion_list.xml
@@ -19,63 +19,13 @@
         />
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:id="@+id/linearLayout"
+        android:layout_width="405dp"
+        android:layout_height="201dp"
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="51dp"
-        tools:layout_editor_absoluteY="0dp">
+        tools:layout_editor_absoluteX="-16dp"
+        tools:layout_editor_absoluteY="374dp">
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:text="Vacation Title" />
-
-        <EditText
-            android:id="@+id/vacation_title"
-            android:layout_width="240dp"
-            android:layout_height="60dp"
-            android:hint="Vacation Title"
-            android:inputType="text" />
-
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:text="Vacation Lodging" />
-
-        <EditText
-            android:id="@+id/vacation_lodging"
-            android:inputType="text"
-            android:layout_width="240dp"
-            android:layout_height="60dp"
-            android:hint="Vacation Lodging"/>
-
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:text="Start Date" />
-
-        <EditText
-            android:id="@+id/startDate"
-            android:inputType="date"
-            android:layout_width="240dp"
-            android:layout_height="64dp"
-            android:hint="Start Date"/>
-
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:text="End Date" />
-
-        <EditText
-            android:id="@+id/endDate"
-            android:inputType="date"
-            android:layout_width="240dp"
-            android:layout_height="59dp"
-            android:hint="End Date"/>
         <!---
                     <TextView
                         android:id="@+id/textView6"
@@ -95,14 +45,112 @@
                         android:layout_width="match_parent"
                         android:layout_height="75dp" />-->
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/excursion_recycler_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            />
-
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="35dp"
+        android:layout_marginTop="16dp"
+        android:text="Vacation Title"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.156"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="35dp"
+        android:layout_marginTop="16dp"
+        android:text="Vacation Lodging"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.802"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/vacation_title"
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:hint="Vacation Title"
+        android:inputType="text"
+        app:layout_constraintBottom_toTopOf="@+id/excursion_recycler_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.105"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.283" />
+
+    <EditText
+        android:id="@+id/vacation_lodging"
+        android:layout_width="151dp"
+        android:layout_height="59dp"
+        android:hint="Vacation Lodging"
+        android:inputType="text"
+        app:layout_constraintBottom_toTopOf="@+id/excursion_recycler_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.842"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.281" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="77dp"
+        android:layout_height="30dp"
+        android:text="Start Date"
+        app:layout_constraintBottom_toTopOf="@+id/excursion_recycler_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.151"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.642" />
+
+    <EditText
+        android:id="@+id/startDate"
+        android:layout_width="120dp"
+        android:layout_height="46dp"
+        android:hint="Start Date"
+        android:inputType="date"
+        app:layout_constraintBottom_toTopOf="@+id/excursion_recycler_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.102"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.85" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="64dp"
+        android:layout_height="30dp"
+        android:text="End Date"
+        app:layout_constraintBottom_toTopOf="@+id/excursion_recycler_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.756"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.642" />
+
+    <EditText
+        android:id="@+id/endDate"
+        android:layout_width="92dp"
+        android:layout_height="45dp"
+        android:hint="End Date"
+        android:inputType="date"
+        app:layout_constraintBottom_toTopOf="@+id/excursion_recycler_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.787"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.846" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/excursion_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="240dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
