--- a/app/src/main/res/menu/base_menu.xml
+++ b/app/src/main/res/menu/base_menu.xml
@@ -1,4 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.vacationapp.main.UI.MainActivity"/>
+    tools:context="com.example.vacationapp.main.UI.MainActivity">
+    <item
+        android:id="@+id/report"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:title="Vacation Report" />
+</menu>
